<resources>
    <string name="app_name">kanban-board</string>


    //register view strings
    <string name="register_login_hint">Create your login...</string>
    <string name="register_password_hint">Create your password...</string>
    <string name="register_title">Please set your login and password for <b>KANBAN</b>.</string>
    <string name="go_to_sign_in_text"><b><u>Already have an account?</u></b></string>
    <string name="sign_up_button_text">Join <b>kanban</b></string>



    //log in
    <string name="login_hint">What was your login...</string>
    <string name="password_hint">What was your password...</string>
    <string name="login_title">Please enter your login and password for <b>KANBAN</b>.</string>
    <string name="go_to_sign_up_text"><b><u>Do you want to create an account?</u></b></string>
    <string name="sign_in_button_text">Sign in to <b>kanban</b></string>

    //board enter
    <string name="board_code_hint">board code...</string>
    <string name="board_name_hint">board name...</string>

    <string name="enter_board_title">Enter code for your board that you have been invited.</string>
    <string name="go_to_create_board_text"><b><u>Do you want to create your own board?</u></b></string>
    <string name="enter_board_button_text">Enter</string>
    //board crete
    <string name="create_board_title">Set code for your board that you want to create!</string>
    <string name="go_to_enter_board_text"><b><u>Do you want to join existing board?</u></b></string>
    <string name="create_board_button_text">create</string>

    //drawer_menu
    <string name="members_title">Members</string>
    <string name="activities_title">Activities</string>
    <string name="your_boards_title">Your boards</string>
    <string name="settings_title">Settings</string>
    <string name="quit_this_board_title">Quit this board</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>

    //board
    <string name="add_text">ADD</string>
    //card_details
    <string name="remove_card_button_text">remove</string>
    <string name="save_card_button_text">save</string>
    <string name="description_card_hint">Task description...</string>
    <string name="owner_card_text">Author</string>
    <string name="token"/>
    <string name="add">ADD</string>
    <string name="logout">Logout</string>
    <string name="name_card_hint">Task name...</string>
    <string name="exit_board">exit board</string>
    <string name="refresh_board">refresh board</string>
</resources>
