<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.mvvm.kanban_board.view.sign_in.SignInViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            tools:context=".view.sign_in.SignInFragment">
        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVerTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="@dimen/percent_sign_up_top_guide"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="@dimen/percent_sign_up_bottom_guide"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toEndOf="@id/guidelineVerTop"
                app:layout_constraintTop_toBottomOf="@id/guidelineHorTop">
            <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@mipmap/kanban"/>

            <TextView
                    android:id="@+id/login_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/logo"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/login_title"
                    android:textColor="@color/colorSecondaryLight"
                    android:layout_marginTop="@dimen/marigin_sign_up_elements"/>
            <EditText
                    android:id="@+id/loginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_description"
                    android:hint="@string/login_hint"
                    android:text="@={viewModel.username}"
                    android:background="@drawable/top_rounded_edittext"
                    android:layout_marginTop="@dimen/marigin_sign_up_edittext"
                    android:padding="@dimen/padding_sign_up_edittext"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorDrawer"/>
            <EditText
                    android:id="@+id/passwordEditText"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginEditText"
                    android:hint="@string/password_hint"
                    android:textColorHint="@color/colorAccent"
                    android:text="@={viewModel.password}"
                    android:background="@drawable/top_rounded_edittext"
                    android:layout_marginTop="@dimen/marigin_sign_up_edittext"
                    android:padding="@dimen/padding_sign_up_edittext"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorDrawer"
                    android:inputType="textPassword"/>
            <TextView
                    android:id="@+id/go_to_sign_up"
                    app:layout_constraintTop_toBottomOf="@id/passwordEditText"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textColor="@color/colorSecondaryLight"
                    android:layout_marginTop="@dimen/marigin_sign_up_elements"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/go_to_sign_up_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
                android:id="@+id/loader"
                app:layout_constraintBottom_toTopOf="@id/bottomElements"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:visibility="@{safeUnbox(viewModel.loaderVisibility)}">

            <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="loader2.json"
                    android:scaleY="0.4"
                    android:scaleX="0.4"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomElements"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toEndOf="@id/guidelineVerTop"
                app:layout_constraintBottom_toTopOf="@id/guidelineHorBottom">

            <TextView
                    android:id="@+id/register_message"
                    app:layout_constraintBottom_toTopOf="@id/sign_in_button"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textColor="@color/colorSecondaryLight"
                    android:layout_marginTop="@dimen/marigin_sign_up_elements"
                    android:text="@{viewModel.responseMessage}" />

            <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/rounded_button"
                    android:minHeight="@dimen/minHeight_sign_up_button"
                    android:onClick="@{() -> viewModel.loginUser()}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>