<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.mvvm.kanban_board.view.card_details.CardDetailsViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryTheDarkest"
            tools:context=".view.sign_in.SignInFragment">
        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVerTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="@dimen/percent_sign_up_top_guide"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="@dimen/percent_sign_up_bottom_guide"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintStart_toEndOf="@id/guidelineVerTop"
                app:layout_constraintTop_toBottomOf="@id/guidelineHorTop">


            <EditText
                    android:id="@+id/name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:hint="@string/name_card_hint"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginTop="@dimen/marigin_sign_up_edittext"
                    android:textColor="@color/colorPrimary"
                    android:lines="2"
                    android:maxLines="2"
                    android:textColorHint="@color/colorDrawer"
                    android:gravity="top"
                    android:text="@{viewModel.name}"/>
            <EditText
                android:id="@+id/description_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/name_edittext"
                app:layout_constraintTop_toBottomOf="@+id/name_edittext"
                android:hint="@string/description_card_hint"
                android:background="@drawable/rounded_edittext"
                android:layout_marginTop="@dimen/marigin_sign_up_edittext"
                android:textColor="@color/colorPrimary"
                android:lines="4"
                android:maxLines="10"
                android:textColorHint="@color/colorDrawer"
                android:gravity="top"
                android:text="@{viewModel.description}"/>
            <ImageView
                    android:id="@+id/user_icon"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintWidth_percent="0.2"
                    app:layout_constraintHeight_percent="0.1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description_edittext"
                    android:layout_marginTop="@dimen/marigin_sign_up_edittext"
                    android:src="@mipmap/ic_user_foreground"/>
            <TextView
                    android:id="@+id/author_desc_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintStart_toEndOf="@+id/user_icon"
                    app:layout_constraintTop_toBottomOf="@id/description_edittext"
                    android:text="@string/owner_card_text"
                    android:layout_marginTop="@dimen/marigin_sign_up_edittext"
                    android:textColor="@color/colorSecondaryLight"
                    android:gravity="left"/>
            <TextView
                    android:id="@+id/author_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.5"
                    app:layout_constraintStart_toEndOf="@+id/author_desc_textview"
                    app:layout_constraintTop_toBottomOf="@id/description_edittext"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginTop="@dimen/marigin_sign_up_edittext"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@{viewModel.author}"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--<LinearLayout-->
                <!--android:id="@+id/loader"-->
                <!--app:layout_constraintBottom_toTopOf="@id/bottomElements"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="match_parent"-->
                <!--android:gravity="center">-->
                <!--&lt;!&ndash;android:visibility="@{safeUnbox(viewModel.loaderVisibility)}">&ndash;&gt;-->

            <!--<com.airbnb.lottie.LottieAnimationView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--app:lottie_autoPlay="true"-->
                    <!--app:lottie_loop="true"-->
                    <!--app:lottie_fileName="loader2.json"-->
                    <!--android:scaleY="0.4"-->
                    <!--android:scaleX="0.4"/>-->
        <!--</LinearLayout>-->

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomElements"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintStart_toEndOf="@id/guidelineVerTop"
                app:layout_constraintBottom_toTopOf="@id/guidelineHorBottom">

            <Button
                    android:id="@+id/save_button"
                    app:layout_constraintBottom_toTopOf="@id/remove_button"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/save_card_button_text"
                    android:textColor="@color/colorSecondaryLight"
                    android:backgroundTint="@color/colorAccent"
                    android:background="@drawable/rounded_middle_button"
                    android:layout_marginBottom="@dimen/marigin_sign_up_elements"/>

            <Button
                    android:layout_marginTop="100dp"
                    android:id="@+id/remove_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_card_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/colorSecondaryLight"
                    android:minHeight="@dimen/minHeight_sign_up_button"
                    android:backgroundTint="@color/colorDanger"
                    android:background="@drawable/rounded_middle_button"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>